[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "addrparser"
version = "0.2.0"
description = "Address parser for Finnish addresses"
authors = ["Lauri Kajan <lauri.kajan@gispo.fi>"]
license = "MIT"
readme = "README.md"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "addrparser" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.scripts]
addr-parse = 'addrparser.cli:main'

[tool.poetry.dependencies]
python = "^3.6.2"
pyparsing = "^3.0.9"
click = [
    {version = "8.0.4", optional = true, python = "3.6"},
    {version = "^8.1.3", optional = true, python = ">3.6" }
]

black = {version = "^22.3.0", optional = true}
isort = {version = "^5.10.1", optional = true}
mypy = {version = "^0.961", optional = true}
pre-commit = {version = "^2.19.0", optional = true}
mkdocs = {version = "^1.3.0", optional = true}
railroad-diagrams = {version = "^1.1.1", optional = true}
jinja2 = {version = "^3.1.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}
pymdown-extensions = {version = "^9.5", optional = true}
mkdocs-material = {version = "^8.3.4", optional = true}
mkdocs-include-markdown-plugin = {version = "^3.5.2", optional = true}
mkdocstrings = [
    {extras = ["python"], version = "0.17.0", optional = true, python = "3.6" },
    {extras = ["python"], version = "^0.19.0", optional = true, python = ">3.6" },
]
mkdocs-autorefs = {version = "^0.4.1", optional = true}
flake8 = {version = "<4.0.0", optional = true}

tox = {version = "^3.25.0", optional = true}
pytest = [
    {version = "7.0.1", optional = true, python = "3.6" },
    {version = "^7.1.2", optional = true, python = ">3.6" },
]
pytest-cov = {version = "^3.0.0", optional = true}


[tool.poetry.extras]
cli = ["click"]

test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "click"
    ]

dev = ["tox", "pre-commit", "bump2version", "railroad-diagrams", "jinja2"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "pymdown-extensions",
    "mkdocs-autorefs"
    ]


[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
    ]
